examples/test/testpolicy10072.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10072
  namespace: namespace263
spec:
  podSelector:
    matchLabels:
      key40: value27
      key43: value33
      key15: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value28
          key24: value33
      podSelector:
        matchLabels:
          key26: value11
          key24: value34
